<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/mm_main"
             android:orderInCategory="101"
            android:title="@string/main_screen"/>
        <!--android:icon="@android:drawable/ic_dialog_dialer"-->
        <item
            android:id="@+id/mm_conected"
            android:orderInCategory="102"
            android:title="@string/current_connection"/>
        <!--android:icon="@android:drawable/ic_popup_sync"-->
        <item
            android:id="@+id/mm_present_location_confirmation"
                    android:orderInCategory="103"
            android:title="@string/present_location_confirmation"/>
        <!--android:icon="@android:drawable/ic_dialog_map"-->
        <item
            android:id="@+id/mm_share"
             android:orderInCategory="104"
            android:title="@string/Indication_of_the_registered_log"/>
    <!--</group>-->
    <!--android:icon="@android:drawable/stat_sys_download"-->
    <!--<item-->
        <!--android:title="Communicate"-->
        <!--app:showAsAction="collapseActionView">-->
        <!--<menu>-->
            <item
                android:id="@+id/mm_send"
                android:orderInCategory="106"
                android:title="@string/save_it_right_now"/>
            <item
                android:id="@+id/mm_transmission_change"
                android:orderInCategory="107"
                android:title="@string/transmission_change"/>
            <item
                android:id="@+id/mm_disconect"
                android:orderInCategory="108"
                 android:title="@string/info_a_setudann"/>
            <item
                android:id="@+id/mm_prefarence"
                android:title="@string/action_settings"
                android:orderInCategory="109"
                app:showAsAction="always|withText"/>
        <!--</menu>-->
    <!--</item>-->
    <item
        android:id="@+id/mm_quit"
        android:orderInCategory="199"
        android:title="終了" />


</menu>
