<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/infoTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/stateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/info_a_name" />

            <TextView
                android:id="@+id/info_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/comon_meisettei" />

        </TableRow>

        <TableRow
            android:id="@+id/kensyuuRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_a_ssid" />

            <TextView
                android:id="@+id/kr_slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/comon_fumei" />

        </TableRow>

        <TableRow
            android:id="@+id/listTitolRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_a_bssid" />

            <TextView
                android:id="@+id/info_bssid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/comon_fumei" />

        </TableRow>

        <TableRow
            android:id="@+id/frequencyRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/info_a_frequency" />

            <TextView
                android:id="@+id/info_frq_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/comon_fumei" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comon_mfz" />
        </TableRow>

        <TableRow
            android:id="@+id/levelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_a_level" />

            <TextView
                android:id="@+id/info_level_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/comon_fumei" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comon_dbm" />
        </TableRow>
        

        <TableRow
            android:id="@+id/capabilitiesRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_a_capabilities" />

            <TextView
                android:id="@+id/info_capabilities_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/comon_fumei" />

        </TableRow>
         	</TableLayout>

    <TextView
        android:id="@+id/other_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/info_tojiru_bt"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.40"
            android:text="@string/comon_tojiru" />

        <Button
            android:id="@+id/info_setuzoku_bt"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.49"
            android:text="@string/info_a_setuzoku" />
    </LinearLayout>

</LinearLayout>