<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hkuwayama.nuloger.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:stretchColumns="0,3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/record_start_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/recordStart"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="103dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/recordInterval"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp"/>

                <Spinner
                    android:id="@+id/step_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:ellipsize="marquee"
                    android:entries="@array/step_list"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="144dp"
                    tools:layout_editor_absoluteY="147dp"/>

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/second_disp"
                    android:textAppearance="@style/TextAppearance.AppCompat"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/measurementSpot"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/latitude_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="35.0000000000"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/longitude_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="134.0000000000"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp">


                <TextView
                    android:id="@+id/timestanp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="2017/12/31 23:59;59"
                    android:textAlignment="textEnd"
                    />


                <TextView
                    android:id="@+id/altitude_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="999"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[m]"/>

                <TextView
                    android:id="@+id/accuracy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="精度"
                    android:textColor="@color/colorAccent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/account_Name"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/accountName_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:text="sousinnsaki@gmail.com"
                    android:textSize="14sp"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="@string/senderName"
                    android:textAlignment="textStart"
                    />

                <TextView
                    android:id="@+id/student_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:text="1234567890"/>

                <TextView
                    android:id="@+id/send_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:text="2017/12/31 23:59;59"
                    android:textAlignment="textStart"/>
            </TableRow>


        </TableLayout>

        <ListView
            android:id="@+id/ap_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView91"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/access_point_of_the_range"
                android:textAlignment="textEnd"
                />

            <TextView
                android:id="@+id/list_up_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="99"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/matter_str"/>
        </LinearLayout>

    </LinearLayout>

    <!--<fragment-->
        <!--android:id="@+id/main_fragment"-->
        <!--android:name="com.example.hkuwayama.nuloger.MainFragment"-->
        <!--android:layout_width="384dp"-->
        <!--android:layout_height="511dp"-->
        <!--tools:layout="@layout/fragment_main" />-->
</android.support.constraint.ConstraintLayout>
